-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.13.0
-
None
-
3
-
9223372036854775807
sanity-sec tests are passing, but there is are errors seen in the suite_log when setting the identity_upcall parameter. Looking at the logs at https://testing.whamcloud.com/test_sets/b76d7526-cf1b-11e9-98c8-52540065bddc , all tests pass, but it looks like ‘lctl set_param’ is failing when setting identity_upcall:
CMD: trevis-3vm6 lctl get_param -n mdt.lustre-MDT0000.identity_upcall CMD: trevis-3vm6 lctl set_param -n mdt.lustre-MDT0000.identity_upcall "/usr/sbin/l_getidentity" trevis-3vm6: error: set_param: setting /sys/fs/lustre/mdt/lustre-MDT0000/identity_upcall=/usr/sbin/l_getidentity: wrote only 1 CMD: trevis-3vm6 lctl set_param -n mdt/lustre-MDT0000/identity_flush=-1 == sanity-sec test 0: uid permission ================================================================= 06:02:21 (1567576941) … == sanity-sec test 16: test nodemap all_off fileops ================================================== 06:19:44 (1567577984) CMD: trevis-3vm6 /usr/sbin/lctl get_param -n version 2>/dev/null || /usr/sbin/lctl lustre_build_version 2>/dev/null || /usr/sbin/lctl --version 2>/dev/null | cut -d' ' -f2 CMD: trevis-3vm6 /usr/sbin/lctl set_param mdt.*.identity_upcall=NONE trevis-3vm6: error: set_param: setting /sys/fs/lustre/mdt/lustre-MDT0000/identity_upcall=NONE: wrote only 1 ..
We see this error prior to test 0, in tests 16, 17, 18, 19, 20, 21, 22, 23a, 23b, 24, 27a and 31
This error started on 02 August 2019 with Lustre 2.12.56.84 with logs at https://testing.whamcloud.com/test_sets/8867f248-b561-11e9-b753-52540065bddc
Logs from 31 July 2019 Lustre 2.12.56.72 does not show this error; https://testing.whamcloud.com/test_sets/8c552c22-b3cc-11e9-9f36-52540065bddc .
The following patches landed between 2.12.56.72 and 2.12.56.84 and, of these, the LU-8066 mdt: migrate procfs files to sysfs patch looks like a possible candidate for this issue:
2019-07-30 Patrick Farrell LU-12560 tests: Use full path for test-groups
2019-07-30 Sebastien Buisson LU-12472 tests: update sanity-krb5.sh
2019-07-30 Andreas Dilger LU-4315 doc: split lctl get_param and set_param man...
2019-07-30 James Simmons LU-8066 mdt: migrate procfs files to sysfs
2019-07-30 Patrick Farrell LU-10070 test: llapi_layout_test enhancements
2019-07-30 Arshad Hussain LU-6142 tests: Fix style issues for write_disjoint.c
2019-07-30 Arshad Hussain LU-6142 tests: Fix style issues for write_append_truncate.c
2019-07-30 Arshad Hussain LU-6142 tests: Fix style issues for lp_utils.c
2019-07-30 Jinshan Xiong LU-4398 llite: do not cache write open lock for exec...
2019-07-30 Andreas Dilger LU-6202 utils: remove obsolete l_ioctl2() wrapper
2019-07-30 Chris Horn LU-12440 lnet: Misleading error from lnet_is_health_check
2019-07-30 Chris Horn LU-12439 lnet: Convert noisy timeout error to cdebug